--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@next/mdx": "11.0.1",
     "fast-glob": "3.2.7",
     "gray-matter": "4.0.3",
-    "next": "11.0.1",
+    "next": "^12.1.5",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -30,6 +30,6 @@
     "babel-plugin-remove-export-keywords": "1.6.22",
     "babel-plugin-styled-components": "1.13.2",
     "next-remote-watch": "^1.0.0",
-    "prettier-standard": "16.4.1"
+    "prettier-standard": "^15.0.1"
   }
 }
